add java epi 18.7

--- a/java_epi/ch18/18.그래프.md
+++ b/java_epi/ch18/18.그래프.md
@@ -495,3 +495,64 @@ private static boolean BFS(GraphVertex s) {
 시간 복잡도는 너비 우선 탐색과 같은 $O(p+w)$가 된다. 여기서 w는 와이어의 개수이다. 공간 복잡도는 $O(p)$가 된다.
 
 그림 18.8처럼 칠할 수 있는 그래프를 이분 그래프라 한다. 또는 2색 그래프라고도 하는데, 이웃 노드끼리 같은 색이 되지 않도록 그래프 전체를 칠할 때 두 가지 색이면 충분하기 때문이다.
+
+## 문제 18.7 문자열을 다른 문자열로 바꾸기
+
+s와 t를 문자열이라 하고 D를 문자열 집합으로 이루어진 사전이라고 하자. 사전 $P = <s_0,s_1,...,s_{n-1}>$에서 첫 번째 문자열은 s, 마지막 문자열은 t, 인접한 문자열의 길이는 같고 오직 하나의 문자만 다를 때 s에서 t를 생성했다고 한다. 이러한 P를 생성 수열이라 한다. 예를 들어 사전 {bat, cot, dog, dag, dot, cat}이 있을 때, 생성 수열은 <cat, cot, dot, dog>이다.
+
+사전 D와 두 개의 문자열 s와 t가 있을 때, s에서 t를 생성할 수 있는지 확인하는 프로그램을 작성하라. 모든 문자는 소문자로 이루어져 있다고 가정해도 좋다. s가 t를 생성할 수 있다면 그 생성 수열 중 가장 짧은 길이를 출력하라. 그런 생성 수열이 존재하지 않는다면 -1을 출력하라.
+
+> 문자열을 무방향 그래프의 노드로 생각하고, 문자열 u와 v의 차이가 문자 하나일 때 간선을 연결하라.
+
+처음 문자열과 차이의 문자 하나인 모든 문자열을 확인하고, 그다음 차이가 문자 두 개인 문자열을 모두 확인한다. 이 과정을 반복해 나가면 된다. 그러나 이 방법은 사전에 없는 문자열을 많이 확인하게 된다는 단점이 있다.
+
+이보다 나은 방법은 사전에 존재하는 단어만 확인해 보는 것이다. 즉, 자연스럽게 이 문제를 그래프로 모델링하면 된다. 노드는 사전에 등장하는 문자열이 되고, 간선 (u,v)는 문자열 u와 v가 오직 문자 하나만 차이가 났을 때 연결시켜주면 된다. 문자 하나만 차이가 난다는 것에는 방향이 없으므로 이 그래프는 무방향 그래프가 된다.
+
+앞의 예제에서 노드는 {bat, cot, dog, dag, dot, cat}이 된다. 그리고 간선은 {(bat,cat),(cot,dot),(cot,cat),(dog,dag),(dog,dot)}이 된다.
+
+생성 수열은 그래프 G에서 경로와 같다 따라서 s에서 t로의 최단 경로를 찾으면 된다. 무방향 그래프에서 최단 경로는 단순하게 너비 우선 탐색을 사용해서 찾을 수 있다.
+
+```java
+private static class StringWithDistance {
+    public String candidateString;
+    public Integer distance;
+
+    public StringWithDistance(String candidateString, Integer distance) {
+        this.candidateString = candidateString;
+        this.distance = distance;
+    }
+}
+
+// 너비 우선 탐색을 사용해서 문자열 변환에 필요한 최소 단계를 찾는다.
+public static int transformString(Set<String> D, String s, String t) {
+    Set<String> visited = new HashSet<String>(D);
+    Queue<StringWithDistance> q = new ArrayDeque<>();
+    visited.remove(s); // s를 삭제함으로써 s를 방문했다고 표시한다.
+    q.add(new StringWithDistance(s, 0));
+
+    StringWithDistance f;
+    while ((f = q.poll()) != null) {
+        // 찾았다면 반환한다.
+        if (f.candidateString.equals(t)) {
+            return f.distance; // t에 도달하는 단계의 수
+        }
+
+        // f.candidateString의 모든 가능한 변환을 시도해 본다.
+        String str = f.candidateString;
+        for (int i = 0; i < str.length(); i++) {
+            String strStart = i == 0 ? "" : str.substring(0, i);
+            String strEnd = i + 1 < str.length() ? str.substring(i + 1) : "";
+            for (int j = 0; j < 26; ++j) { // Iterates through 'a' ~ 'z'
+                String modStr = strStart + (char)('a' + j) + strEnd;
+                if (D.remove(modStr)) {
+                    q.add(new StringWithDistance(modStr, f.distance + 1));
+                }
+            }
+        }
+    }
+
+    return -1; // 가능한 변환을 찾지 못했다.
+}
+```
+
+노드의 개수는 사전에 있는 단어의 개수인 d와 같다. 간선의 개수는 최악의 경우에 $O(d^2)$가 된다. 너비 우선 탐색의 시간 복잡도는 $O(d + d^2) = O(d^2)$이 된다. 만약 문자열의 길이 n이 d보다 작다면 각 노드에 연결된 간선의 최대 개수는 $O(n)$이고, 따라서 시간 복잡도는 $O(nd)$이다.
