--- a/java_epi/ch18/18.그래프.md
+++ b/java_epi/ch18/18.그래프.md
@@ -556,3 +556,75 @@ public static int transformString(Set<String> D, String s, String t) {
 ```
 
 노드의 개수는 사전에 있는 단어의 개수인 d와 같다. 간선의 개수는 최악의 경우에 $O(d^2)$가 된다. 너비 우선 탐색의 시간 복잡도는 $O(d + d^2) = O(d^2)$이 된다. 만약 문자열의 길이 n이 d보다 작다면 각 노드에 연결된 간선의 최대 개수는 $O(n)$이고, 따라서 시간 복잡도는 $O(nd)$이다.
+
+## 고급 그래프 알고리즘
+
+지금까지 그래프에서의 간단한 조합의 속성에 대해 살펴보았다. 알고리즘은 모두 선형 시간 복잡도이며 상대적으로 간단했다. 가장 어려웠던 건 문제를 적절하게 모델링하는 부분이었다.
+
+다항 시간(polynominal time)에 복잡한 그래프 문제를 효율적으로 풀 수 있는 네 가지 부류가 있다. 대부분의 그래프 문제는 이들의 변형 문제이거나 다항 시간 알고리즘으로 풀지 못하는 문제일 가능성이 크다. 네 가지 부류는 다음과 같다.
+
+- 최단 경로: 간선에 비용이 포함된 방향 혹은 무방향 그래프가 주어졌을 때, 주어진 노드에서 모든 노드로의 경로 중에서 최소 비용의 경로를 구하라. 비용이 음이 아닌 정수인 경우에 모든 노드 쌍에 대한 최단 비용 경로를 찾는 응용 문제도 있을 수 있다.
+- 최소 신장 트리(MST): 간선에 가중치가 실려 있는 연결된 무방향 그래프 G = (V,E)가 주어졌을 때, 가중치가 최소가 되는 간선의 부분 집합 E'로 이루어진 부분 그래프 G' = (V,E')를 구하라. 단, G' 또한 연결되어 있어야 한다.
+- 매칭: 무방향 그래프가 주어졌을 때, 각 노드에 연결된 간선이 최대 한 개인 조건에서 최대한 많은 간선의 컬렉션을 찾으라. 특히 이분 그래프에서의 매칭 문제는 흔하고 이 문제를 푸는 알고리즘 또한 일반적인 경우보다 간단하다. 이 문제에 대한 응용 문제로는 최대 가중치 매칭 문제가 있다. 이 문제에서는 간선에 가중치가 주어져 있을 때, 같은 조건하에서 간선의 가중치를 최대로 한다.
+- 최대 흐름: 각 간선에 용량이 표시된 방향 그래프가 주어졌을 때, 소스 노드에서 싱크 노드로 흐를 수 있는 최대 흐름을 구하라. 소스 노드와 싱크 노드에 대해서는 이번 장의 도입부에서 설명했다. 여기서 흐름은 각 간선에 주어진 용량을 넘지 않으면 안 되고, 반드시 각 노드에 유입된 양만큼 유출되어야 한다. 최소 비용 순환 문제는 최대 흐름 문제를 일반화한 것이다. 각 간선에 흐르는 야에 비례해서 비용이 발생하는데, 그 비용을 최소화해야 한다.
+
+네 가지 문제는 전부 다항 시간 알고리즘이 존재하며 크기가 큰 그래프에 대해서도 효율적으로 풀 수 있다. 이러한 문제에 대한 알고리즘은 문제 맞춤형인 경우가 많고 일반적인 접근 방법으로 항상 최적의 해법을 구할 수는 없다. 예를 들어 최소 신장 트리를 구할 때 다음과 같은 분할 정복법을 사용할 수도 있다. 노드를 두 개의 집합으로 나누고, 각 부분 집합에 대해서 최소 신장 트리를 구한 뒤에 두 최소 신장 트리를 연결하는 최소 가중치의 간선을 찾아서 연결한다. 그림 18.9를 보면 어떻게 이 알고리즘이 부분 최적에 도달하게 되는지 알 수 있다.
+
+여기서는 최단 경로 문제에만 초점을 맞추도록 하겠다.
+
+## 문제 18.8 팀 사진 찍는 날 - 2
+
+문제 13.9를 다시 떠올려 보자. 같은 조건에서 가장 많은 팀이 동시에 사진을 찍을 수 있도록 하려면 문제 13.9를 어떻게 일반화해야 할까?
+
+> 힌트: 유효한 배치에 따라 경로를 구성하는 비순환 그래프(DAG)를 만들라.
+
+각 팀이 노드가 되고, 팀 X를 팀 Y 뒤에 배치해도 될 때, X와 Y 사이에 간선을 만들어서 비순환 방향 그래프 G를 만들자.
+
+팀 X를 팀 Y 뒤에 배치할 때 가능한 순서는 그래프 G의 경로에 해당한다. 따라서 비순환 방향 그래프 G에서 가장 긴 경로를 찾으면 된다. 예를 들어 G의 노드를 위상 순서대로 정렬해서 찾을 수 있다. 노드 v에서 끝나는 가장 긴 경로는 v 바로 이전에 끝나는 경로들 중, 가장 긴 경로 뒤에 v를 덧붙인 것과 같다.
+
+```java
+public static class GraphVertex {
+    public List<GraphVertex> edges = new ArrayList<>();
+    // 방문하지 않은 노드를 가리키기 위해 maxDistance = 0으로 설정한다.
+    public int maxDistance = 0;
+}
+
+public static int findLargestNumberTeams(List<GraphVertex> G) {
+    return findLongestPath(buildTopologicalOrdering(G));
+}
+
+private static Deque<GraphVertex> buildTopologicalOrdering(List<GraphVertex> G) {
+    Deque<GraphVertex> orderedVertices = new ArrayDeque<>();
+    for (GraphVertex g : G) {
+        if (!g.maxDistance == 0) {
+            DFS(g, orderedVertices);
+        }
+    }
+    return orderedVertices;
+}
+
+private static int findLongestPath(Deque<GraphVertex> orderedVertices) {
+    int maxDistance = 0;
+    while (!orderedVertices.isEmpty()) {
+        GraphVertex u = orderedVertices.peekFirst();
+        maxDistance = Math.max(maxDistance, u.maxDistance);
+        for (GraphVertex v : u.edges) {
+            v.maxDistance = Math.max(v.maxDistance, u.maxDistance + 1);
+        }
+        orderedVertices.removeFirst();
+    }
+    return maxDistance;
+}
+
+private static void DFS(GraphVertex curr, Deque<GraphVertex> orderedVertices) {
+    curr.maxDistance = 1;
+    for (GraphVertex vertex : curr.edges) {
+        if (vertex.maxDistance == 0) {
+            DFS(vertex, orderedVertices);
+        }
+    }
+    orderedVertices.addFirst(curr);
+}
+```
+
+위상 순서로 정렬하는 데 걸리는 시간은 $O(|V| + |E|)$이고 이 복잡도가 문제를 푸는 데 걸리는 시간의 대부분을 차지한다. $|V|$는 팀의 개수를 말한다. $|E|$의 개수는 선수의 키에 따라 달라지는데, 길이가 $|V| - 1$인 경로가 존재할 때 $O(|V|^2)$보다 많을 수도 있다.
