--- a/java_epi/ch19/19.병렬 컴퓨팅.md
+++ b/java_epi/ch19/19.병렬 컴퓨팅.md
@@ -63,3 +63,118 @@ public class Semaphore {
 - 병렬화된 코드를 분석할 때는 언제나 최악의 상황을 생각하라. 예를 들어 같은 스레드를 반복해서 실행할 수도 있고, 두 스레드를 번갈아가며 실행할 수도 있고, 스레드가 고갈될 수도 있다. 이 모든 상황을 고려하라.
 - **높은 추상화 수준**에서 작업하라. 특히 **병렬화 라이브러리**에 익숙해져야 한다. **세마포어, 스레드풀, 실행 지연시키기(deferred execution)**등은 직접 구현하지 말라. (이들을 어떻게 구현하는지는 알고 있어야 하고, 면접관이 요구하면 구현할 수 있어야 한다.) [문제 19.4]
 
+## 문제 191. 다중 스레드 사전을 위한 캐시 구현하기
+
+다음은 실시간으로 오타를 정정해 주는 프로그램의 한 부분이다. 클라이언트가 문자열을 전송하면 사전에서 입력 문자열과 가장 가까운 문자열을 찾아 문자열 배열을 반환해야 한다. (이 배열은 문제 16.2의 해법을 사용해서 구할 수 있다.) 캐시를 사용해서 성능을 향상하려고 했지만 다음 코드에 문제점이 있다. 그 문제점을 찾고, 해결책을 제시하라.
+
+```java
+public static class UnsafeSpellCheckService extends SpellCheckService {
+    private static final int MAX_ENTRIES = 3;
+
+    private static LinkedHashMap<String, String[]> cachedClosestStrings
+        = new LinkedHashMap<>() {
+            protected boolean removeEldestEntry(Map.Entry eldest) {
+                return size() > MAX_ENTRIES;
+            }
+        };
+    
+    public static void service(ServiceRequest req, ServiceResponse resp) {
+        String w = req.extractWordToCheckFromRequest();
+        if (cachedClosestStrings.containsKey(w)) {
+            resp.encodeIntoResponse(cachedClosestStrings.get(w));
+            return;
+        }
+        String[] closestToLastWord = Spell.closestInDictionary(w);
+        cachedClosestStrings.put(w, closestToLastWord);
+    }
+}
+```
+
+> 힌트: 경쟁(race)이 발생하는 곳을 찾아보라. 그리고 처리량을 늘리기 위해 락을 최대한 적게 사용하라.
+
+이 코드에는 경쟁 조건(race condition)이 존재한다. 클라이언트 A와 B가 각각 요청 A와 B를 동시에 요청하고, 각 요청을 담당하는 스레드가 하나씩 존재한다고 가정하자. 요청 A를 담당하는 스레드가 캐시에 입력 문자열이 존재한다는 사실을 발견한 뒤 스레드 B가 곧바로 실행됐다. 그리고 이 스레드는 캐시에서 문자열을 찾지 못해서 결과를 계산한 뒤 캐시에 넣는 작업을 한다. 만약 캐시가 꽉 찼다면 그중 하나를 버리는데, 그 엔트리가 요청 A가 원하는 엔트리일 수도 있다. 이제 요청 A를 담당하는 스레드가 다시 실행된다. 캐시에 입력 문자열이 존재한다고 알고 있었지만, 그 값을 읽으려고 하면 널(null)을 반환한다.
+
+스레드-안전 해법은 앞의 서비스를 호출할 때마다 동기화를 하는 것이다. 이 경우에는 한 번에 하나의 스레드만 service() 메서드를 실행할 수 잇게 해서, 캐시를 읽을 때와 쓸 때 경쟁 조건이 없도록 한다. 하지만 한 번에 하나의 스레드만 실행된다면 전체 성능이 굉장히 안 좋을 것이다.
+
+이럴 때는 꼭 필요한 부분에만 락을 설정하고 캐시 값을 사용하는 게 좋다. 캐시를 확인할 때와 캐시값을 갱신할 때만 락을 설정하는 것이다.
+
+다음 프로그램은 다중 스레드가 동시에 가장 가까운 문자열들을 구하는 코드이다. 요청 처리에 걸리는 시간을 줄이기 위해 꼭 필요한 곳에만 락을 설정했다. 캐시를 사용하는 이유 역시 처리 시간을 줄이기 위해서다. 락을 사용하기 때문에 캐시를 읽거나 갱신하는 작업은 단일(atomic) 작업이 된다.
+
+```java
+public static class UnsafeSpellCheckService extends SpellCheckService {
+    private static final int MAX_ENTRIES = 3;
+
+    private static LinkedHashMap<String, String[]> cachedClosestStrings
+        = new LinkedHashMap<>() {
+            protected boolean removeEldestEntry(Map.Entry eldest) {
+                return size() > MAX_ENTRIES;
+            }
+        };
+    
+    public static void service(ServiceRequest req, ServiceResponse resp) {
+        String w = req.extractWordToCheckFromRequest();
+        synchronized (S2Alternative.class) {
+            if (cachedClosestStrings.containsKey(w)) {
+                resp.encodeIntoResponse(cachedClosestStrings.get(w));
+                return;
+            }
+        }
+        String[] closestToLastWord = Spell.closestInDictionary(w);
+        synchronized (S2Alternative.class) {
+            cachedClosestStrings.put(w, closestToLastWord);
+        }
+    }
+}
+```
+
+## 문제 19.2 두 개의 스레드가 동기화되지 않은 채 번갈아 수행되는 경우 분석하기
+
+다음 코드에서 볼 수 있듯이 스레드 t1과 t2는 각각 정수값을 N번 증가시킨다. 하지만 이 프로그램의 결과는 일정하지 않다. 보통은 2N을 출력하지만 가끔 이보다 더 작은 값을 출력하기도 한다. N의 값이 커지면 이러한 현상이 더 자주 발생한다. 실제로 N = 1000000이 입력으로 주어졌을 때 1320209를 출력하는 경우도 있다.
+
+```java
+public static class IncrementThread implements Runnable {
+    public void run() {
+        for (int i = 0; i < TwoThreadIncrementDriver.N; i++) {
+            TwoThreadIncrementDriver.counter++;
+        }
+    }
+}
+
+public static class TwoThreadIncrementDriver {
+    public static int counter;
+    public static int N;
+
+    public static void main(String[] args) throws Exception {
+        N = (args.length > 0) ? new Integer(args[0]) : 100;
+
+        Thread t1 = new Thread(new IncrementThread());
+        Thread t2 = new Thread(new IncrementThread());
+
+        t1.start();
+        t2.start();
+        t1.join();
+        t2.join();
+
+        System.out.println(counter);
+    }
+}
+```
+
+N이 주어졌을 때 출력될 수 있는 최솟값과 최댓값은 무엇인가?
+
+> 힌트: 스레드를 스케줄링할 때는 극단적인 경우를 생각하라.
+
+먼저, 숫자를 증가시키는 부분이 락에 의해 보호받지 못하고 있으므로 스레드 스케줄러가 카운터를 증가시키는 스레드를 어떻게 배치시키느냐에 따라 그 값이 결정된다.
+
+언제나 하나의 스레드가 끝난 뒤 다음 스레드가 실행된다면 이 프로그램이 출력할 수 있는 최댓값은 2N이다.
+
+N = 1일 때, 출력될 수 있는 최솟값은 1이다. t1이 값을 읽고, t2가 값을 읽고, t1이 값을 증가한 뒤 갱신하고, t2가 값을 증가한 뒤 갱신하면 그렇게 된다. N > 1인 경우에 최종값은 적어도 2보다 크거나 같게 된다. 그 이유는 다음과 같이 두 가지 가능성이 존재한다. 첫 번째 가능성은 T1이 먼저 실행되는 경우다. T2라는 스레드가 값을 갱신하기 전에 스레드 T1이 읽고-증가하고-갱신하고-읽고-증가하고-갱신하는 작업을 수행한다면 그 결과는 적어도 2가 된다. 그다음 T2가 1을 쓰면, 아직 완료되지 않았으므로 적어도 한 번 더 증가한다. 두 번째 가능성은, T2가 먼저 실행되고 T1이 두 번째로 값을 읽는 경우다. 이때는 1 혹은 그 이상의 값을 읽는다. 왜냐하면 T2가 적어도 한번 값을 갱신했기 때문이다.
+
+스레드가 다음과 같이 스케줄링될 때 가능한 최소한의 결괏값은 2가 된다.
+
+- t1이 초깃값인 0을 읽는다.
+- t2가 N - 1번 갱신 작업을 실행한다.
+- t1은 그 사이에 값이 어떻게 바뀌었는지 모르므로 1로 갱신한다.
+- t2가 최근에 갱신된 값인 1을 읽는다.
+- t1이 N - 1번 갱신 작업을 실행한다.
+- t2는 그 사이에 값이 어떻게 바뀌었는지 모르므로 2로 갱신한다.
