--- a/java_epi/ch19/19.병렬 컴퓨팅.md
+++ b/java_epi/ch19/19.병렬 컴퓨팅.md
@@ -63,7 +63,7 @@ public class Semaphore {
 - 병렬화된 코드를 분석할 때는 언제나 최악의 상황을 생각하라. 예를 들어 같은 스레드를 반복해서 실행할 수도 있고, 두 스레드를 번갈아가며 실행할 수도 있고, 스레드가 고갈될 수도 있다. 이 모든 상황을 고려하라.
 - **높은 추상화 수준**에서 작업하라. 특히 **병렬화 라이브러리**에 익숙해져야 한다. **세마포어, 스레드풀, 실행 지연시키기(deferred execution)**등은 직접 구현하지 말라. (이들을 어떻게 구현하는지는 알고 있어야 하고, 면접관이 요구하면 구현할 수 있어야 한다.) [문제 19.4]
 
-## 문제 191. 다중 스레드 사전을 위한 캐시 구현하기
+## 문제 19.1 다중 스레드 사전을 위한 캐시 구현하기
 
 다음은 실시간으로 오타를 정정해 주는 프로그램의 한 부분이다. 클라이언트가 문자열을 전송하면 사전에서 입력 문자열과 가장 가까운 문자열을 찾아 문자열 배열을 반환해야 한다. (이 배열은 문제 16.2의 해법을 사용해서 구할 수 있다.) 캐시를 사용해서 성능을 향상하려고 했지만 다음 코드에 문제점이 있다. 그 문제점을 찾고, 해결책을 제시하라.
 
@@ -178,3 +178,78 @@ N = 1일 때, 출력될 수 있는 최솟값은 1이다. t1이 값을 읽고, t2
 - t2가 최근에 갱신된 값인 1을 읽는다.
 - t1이 N - 1번 갱신 작업을 실행한다.
 - t2는 그 사이에 값이 어떻게 바뀌었는지 모르므로 2로 갱신한다.
+
+## 문제 19.3 두 개의 스레드가 번갈아 수행될 때 동기화 구현하기
+
+스레드 t1은 1부터 100까지의 홀수를 출력한다. 스레드 t2는 1에서 100까지의 짝수를 출력한다. 두 개의 스레드가 동시에 수행될 때 1부터 100까지 차례대로 출력하는 코드를 작성하라.
+
+> 힌트: 두 개의 스레드가 작업이 끝나면 서로에게 알려 줘야 한다.
+
+무식한 방법은 두 개의 스레드가 번갈아 가며 락을 사용하는 것이다. 락을 사용해서 현재 어떤 스레드가 변수를 출력할 차례인지 확인을 한다. 그러나 이 방법은 프로세서가 다른 작업을 처리하는 데 쓸 수 있는 시간을 낭비하는 바쁜 대기(busy waiting)를 사용한다.
+
+다음은 이 아이디어를 코드로 구현하되 java의 wait()와 notify()를 사용해서 바쁜 대기를 회피하는 것이다.
+
+```java
+public static class OddEvenMonitor {
+    public static final boolean ODD_TURN = true;
+    public static final boolean EVEN_TURN = false;
+    private boolean turn = ODD_TURN;
+
+    // wait()를 호출하기 위해선 동기화 작업이 필요하다.
+    // 자세한 설명은 링크를 참조하라: https://stackoverflow.com/questions/2779484
+    public synchronized void waitTurn(boolean oldTurn) {
+        while (turn != oldTurn) {
+            try {
+                wait();
+            } catch (InterruptedException e) {
+                System.out.println("InterruptedException in wait(): " + e);
+            }
+        }
+        // 우리가 실행할 차례이다.
+    }
+
+    // notify()를 실행하기 위해선 동기화 작업이 필요하다.
+    public synchronized void toggleTurn() {
+        turn ^= true;
+        notify();
+    }
+}
+
+public static class OddThread extends Thread {
+    private final OddEvenMonitor monitor;
+
+    public OddThread(OddEvenMonitor monitor) { this.monitor = monitor; }
+    @Override
+    public void run() {
+        for (int i = 1; i <= 100; i += 2) {
+            monitor.waitTurn(OddEvenMonitor.ODD_TURN);
+            System.out.println("i = " + i);
+            monitor.toggleTurn();
+        }
+    }
+}
+
+public static class EvenThread extends Thread {
+    private final OddEvenMonitor monitor;
+
+    public EvenThread(OddEvenMonitor monitor) { this.monitor = monitor; }
+    @Override
+    public void run() {
+        for (int i = 2; i <= 100; i += 2) {
+            monitor.waitTurn(OddEvenMonitor.EVEN_TURN);
+            System.out.println("i = " + i);
+            monitor.toggleTurn();
+        }
+    }
+}
+
+public static void main(String[] args) throws InterruptedException {
+    OddEvenMonitor monitor = new OddEvenMonitor();
+    Thread t1 = new OddThread(monitor);
+    Thread t2 = new EvenThread(monitor);
+    t1.start();
+    t2.start();
+    t1.join();
+    t2.join();
+}
+```
