add java epi 19.4,19.5

--- a/java_epi/ch19/19.병렬 컴퓨팅.md
+++ b/java_epi/ch19/19.병렬 컴퓨팅.md
@@ -253,3 +253,123 @@ public static void main(String[] args) throws InterruptedException {
     t2.join();
 }
 ```
+
+## 문제 19.4 스레드 풀 구현하기
+
+다음 프로그램은 간단한 HTTP 서버를 구현한 코드이다.
+
+```java
+public static class SingleThreadWebServer {
+    public static final int PORT = 8080;
+    public static void main(String[] args) throws IOException {
+        ServerSocket serversock = new ServerSocket(PORT);
+        for (;;) {
+            Socket sock = serversock.accept();
+            processReq(sock);
+        }
+    }
+}
+```
+
+이 프로그램이 I/O를 자주 차단해서 성능이 굉장히 나쁘다고 가정하자. 어떻게 하면 프로그램의 성능을 향상시킬 수 있을까? 동기화 클래스를 포함해서 표준 라이브러리는 얼마든지 사용해도 좋다.
+
+> 힌트: 다중 스레드를 사용하라. 단, 스레드의 개수를 무한정 늘려서는 안 된다.
+
+가장 먼저 할 수 있는 작업은 요청을 직접 처리하기보다 각 요청을 담당하는 새로운 스레드를 만드는 것이다.
+
+```java
+public static class ConcurrentWebServer {
+    private static final int SERVERPORT = 8080;
+    public static void main(String[] args) throws IOException {
+        final ServerSocket serversocket = new ServerSocket(SERVERPORT);
+        while (true) {
+            final Socket connection = serversocket.accept();
+            Runnable task = new Runnable() {
+                public void run() { Worker.handleRequest(connection); }
+            };
+            new Thread(task).start();
+        }
+    }
+}
+```
+
+이 방법의 문제는 스레드의 개수를 직접 조절할 수 없다는 점이다. 각 스레드는 꽤 많은 양의 자원을 사용한다. 스레드를 시작하거나 끝낼 때 필요한 시간과 각 스레드가 사용하는 메모리 공간이 매우 많이 필요하다. 요청이 많지 않은 서버일 경우에는 문제가 되지 않을 수 있지만, 요청의 개수가 많아지면 처리하기 어려운 예외가 발생할 수 있다.
+
+이를 보완하기 위해 스레드 풀을 사용한다. 이름에서 알 수 있듯이 처음에 스레드의 개수를 한정한 뒤 그만큼의 컬렉션을 사용한다. 블록 큐(blocking queue)를 사용하면 상대적으로 쉽게 스레드 풀을 구현할 수 있다. 블록 큐란 큐가 비어 있는 상태가 될 때까지 스레드의 갱신 작업을 블록하는 것을 말한다. 하지만 문제에서 명시적으로 라이브러리를 사용해도 된다고 했기 때문에 여기서는 Executor 프레임워크에서 제공하는 스레드 풀을 사용할 것이다. 다음은 이를 구현한 코드이다.
+
+```java
+public static class ThreadPoolWebServer {
+    private static final int NTHREAD = 100;
+    private static final int SERVERPORT = 8080;
+    private static final Executor exec = Executors.newFixedThreadPool(NTHREAD);
+
+    public static void main(String[] args) throws IOException {
+        ServerSocket serversocket = new ServerSocket(SERVERPORT);
+        while (true) {
+            final Socket connection = serversocket.accept();
+            Runnable task = new Runnable() {
+                public void run() { Worker.handleRequest(connection); }
+            };
+            exec.execute(task);
+        }
+    }
+}
+```
+
+## 문제 19.5 데드락 피하기
+
+어떤 작업을 수행하기 위해서 스레드가 여러 개의 락을 취득해야 한다면 데드락이 발생할 가능성이 있다. 예를 들어 T1과 T2가 모두 L과 M을 취득해야 한다고 하자. T1이 먼저 L을 취득하고 T2가 그 다음에 M을 취득한다면 이 둘은 영원히 상대방을 기다리게 된다.
+
+다음 프로그램에서 이와 같은 버그를 찾은 뒤 코드를 수정해서 그 문제를 해결하라.
+
+```java
+public static class Account {
+    private int balance;
+    private int id;
+    private static int globalId;
+
+    Account(int balance) {
+        this.balance = balance;
+        this.id = ++globalId;
+    }
+
+    private boolean move(Account to, int amount) {
+        synchronized (this) {
+            synchronized (to) {
+                if (amount > balance) {
+                    return false;
+                }
+                to.balance += amount;
+                this.balance -= amount;
+                System.out.println("returning true");
+                return true;
+            }
+        }
+    }
+
+    public static void transfer(final Account from, final Account to, final int amount) {
+        Thread transfer = new Thread(new Runnable() {
+            public void run() { from.move(to, amount); }
+        });
+        transfer.start();
+    }
+}
+```
+
+U1에서 U2로의 송금 바로 직후에 U2에서 U1으로 송금한다고 가정해 보자. 각 송금은 서로 다른 스레드가 담당하기 때문에 첫 번째 스레드가 U1에 락을 건 뒤 두 번째 스레드가 실행돼서 U2에 락을 걸 수도 있다. 그러면 이 프로그램은 데드락 상태에 빠지게 된다. 결국 두 스레드는 모두 다른 스레드가 락을 해제하기를 기다리게 된다.
+
+한 가지 가능한 해법은 송금을 할 때 전역으로 정의된 락을 사용하는 것이다. 이 방법의 단점은 아무 관련 없는 다른 송금에 대해서도 모두 블록하게 된다는 점이다. 즉, U5에서 U6으로 송금할 때 U3에서 U4로 송금할 수 없다.
+
+데드락을 피할 수 있는 다른 방법은 락을 취득할 때 전역적인 순서대로 취득하게 하면 된다. 각 계좌에 유일한 ID가 부여되므로 다음과 같이 수정하면 데드락을 피할 수 있다.
+
+```java
+Account lock1 = (id < to.id) ? this : to;
+Account lock2 = (id < to.id) ? to : this;
+synchronized (lock1) {
+    // lock1과 lock2가 같아도 된다.
+    // Java에서 락은 재진입이 가능하므로 lock2를 다시 취득하기 때문이다.
+    synchronized (lock2) {
+        ...
+    }
+}
+```
