add java epi 19.6,19.7

--- a/java_epi/ch19/19.병렬 컴퓨팅.md
+++ b/java_epi/ch19/19.병렬 컴퓨팅.md
@@ -373,3 +373,81 @@ synchronized (lock1) {
     }
 }
 ```
+
+## 문제 19.6 읽는자-쓰는자 문제
+
+여러 스레드가 읽기도 하고 쓰기도 하는 객체 s를 생각해 보자. (예를 들어 문제 20.1에서 s가 캐시가 될 수도 있었다.) 어떤 스레드가 s에 쓰는 동안에는 아무도 s를 읽거나 s에 쓰면 안 된다. (여러 개의 스레드가 동시에 읽는 건 가능하다.)
+
+s를 보호할 수 있게 하려면 뮤텍스(mutex)를 사용해서 두 개의 스레드가 동시에 s에 접근할 수 없게 만들면 된다. 하지만 이 방법은 부분 최적일 뿐이다. 왜냐하면 R1이 s를 읽기 위해 락을 사용했지만 동시에 R2도 s를 읽고 싶을 수 있기 때문이다. R2는 R1의 읽는 작업이 끝날 때까지 기다릴 이유가 없다. R1이 읽을 때 R2도 동시에 읽을 수 있다.
+
+여기서 읽는자-쓰는자 문제가 발생한다. s를 보호하되 갱신이 이루어지지 않을 때는 모두 읽을 수 있도록 해 보자.
+
+첫 번째 읽는자-쓰는자 문제를 해결하는 동기화 기법을 구현하라.
+
+> 힌트: 읽는 스레드의 개수를 기록하라.
+
+현재 문자열을 읽는 스레드가 있는지 없는지, 그리고 해당 문자열을 갱신하려는 스레드가 있는지 없는지 추적하려고 한다. 또한 문자열을 읽고 있다면 몇 개의 스레드가 읽고 있는지 알고자 한다. 이를 위해 읽기 락과 쓰기 락 두 개를 사용한다. 그리고 읽기 락을 사용해서 읽는 스레드의 개수를 기록한다.
+
+읽는 작업은 다음과 같다. 읽기 락을 취득한 뒤 카운터를 증가시키고 읽기 락을 해제한다. 읽는 작업이 끝난 뒤에는 읽기 락을 취득하고 카운터를 감소시킨 뒤 읽기 락을 해제한다. 값을 갱신할 때에는 쓰기 락을 취득한 뒤 다음을 무한히 반복한다. 우선 읽기 락을 취득하고 그 카운터가 0인지 확인한다. 만약 0이라면 쓰는 작업을 수행하고 읽기 락을 해제한 뒤 루프를 빠져나온다. 마지막으로 쓰기 락을 해제한다. 문제 19.3의 해법처럼 바쁜 대기(busy waiting)를 피하기 위해 wait/notify를 사용한다.
+
+```java
+// LR과 LW는 RW 클래스 안에서 정의된 정적 객체로, 각각 읽기 락과 쓰기 락을 표현한다.
+// RW 안에 있는 정적 정수값 readCount는 읽는 스레드의 개수를 추적하는 데 사용된다.
+public static class Reader extends Thread {
+    public void run() {
+        while (true) {
+            synchronized (RW.LR) { RW.readCount++; }
+            System.out.println(RW.data);
+            synchronized (RW.LR) {
+                RW.readCount--;
+                RW.LR.notify();
+            }
+            Task.doSomeThingElse();
+        }
+    }
+}
+
+public static class Writer extends Thread {
+    public void run() {
+        while (true) {
+            synchronized (RW.LW) {
+                boolean done = false;
+                while (!done) {
+                    synchronized (RW.LR) {
+                        if (RW.readCount == 0) {
+                            RW.data = new Date().toString();
+                            done = true;
+                        } else {
+                            // 바쁜 대기를 피하기 위해 wait/notify를 사용했다.
+                            try {
+                                // 거짓 통보로부터 보호한다. stackoverflow.com에서
+                                // 'do spurious wakeups actually happen'을 검색해 보라.
+                                while (RW.readCount != 0) {
+                                    RW.LR.wait();
+                                }
+                            } catch (InterruptedException e) {
+                                System.out.println("InterruptedException in Writer wait");
+                            }
+                        }
+                    }
+                }
+            }
+            Task.doSomeThingElse();
+        }
+    }
+}
+```
+
+이 해법의 한가지 잠재적인 단점은 쓰는자가 고갈될 수 있다는 것이다. 문제 19.7의 주제가 바로 여기에 관한 것이다.
+
+## 문제 19.7 쓰는 작업에 선호도가 존재할 때 읽는자-쓰는자 문제
+
+문제 19.6처럼 객체 s가 있다고 가정하자. 읽는자 R1은 락을 사용할 수 있다. 만약 쓰는자 W가 락을 기다리고 있는 동안 R2의 요청이 들어온다면, R2가 W보다 높은 우선순위를 가진다. 만약 이러한 일이 자주 발생한다면 W는 작업을 수행하지 못하게 되므로 W를 가능한 한 빨리 처리해야 한다.
+
+여기서 두 번째 읽는자-쓰는자 문제가 나온다. s를 '쓰는자 우선권'으로 보호한다. 즉, 쓰는 작업이 큐에 삽입된 후에는 작업이 필요 이상으로 기다리지 않도록 보호하는 것이다.
+
+두 번째 읽는자-쓰는자 문제의 동기화 기법을 구현하라.
+
+> 힌트: 읽는자에게 쓰기 락을 취득하도록 해 보자.
+
+쓰는자에게 우선권을 부여하려고 한다. 문제 19.6의 해법을 수정해서 읽기 시작할 때 쓰기 락을 취득한 후에 곧바로 해제하도록 한다. 이렇게 하면 쓰는 작업이 뒤따라 발생하는 읽는 작업보다 먼저 수행될 수 있다.
