--- a/java_epi/ch19/19.병렬 컴퓨팅.md
+++ b/java_epi/ch19/19.병렬 컴퓨팅.md
@@ -451,3 +451,87 @@ public static class Writer extends Thread {
 > 힌트: 읽는자에게 쓰기 락을 취득하도록 해 보자.
 
 쓰는자에게 우선권을 부여하려고 한다. 문제 19.6의 해법을 수정해서 읽기 시작할 때 쓰기 락을 취득한 후에 곧바로 해제하도록 한다. 이렇게 하면 쓰는 작업이 뒤따라 발생하는 읽는 작업보다 먼저 수행될 수 있다.
+
+## 문제 19.8 타이머 클래스 구현하기
+
+웹 기반 달력을 생각해 보자. 이 달력을 제공하는 서버는 이벤트가 발생하기 전에 이메일 혹은 문자 메시지(SMS)를 보내야 한다. 이러한 작업을 관리하는 시스템을 설계하라.
+
+미뤄 두었던 일을 수행할 수 있도록 하는 타이머 클래스를 개발하라. 타이머 생성자는 실행할 메서드와 이름을 나타내는 문자열로 이루어진 인자로 받는다. 클래스는 반드시 다음 조건을 만족해야 한다. (1) 특정 시간에 특정 이름의 스레드를 실행하야 한다. (2) 특정 이름의 스레드를 취소할 수 있어야 한다. (스레드가 이미 실행되었다면 취소 요청을 무시해도 된다.)
+
+> 힌트: 자료구조 설계와 병렬처리를 고려하자.
+
+설계할 때 생각해야 할 두 가지 측면은 자료구조와 락 기법이다.
+
+두 가지 자료구조를 사용할 것이다. 하나는 키와 값의 쌍으로 이루어진 최소힙이다. 키는 수행 시간을 나타내고 값은 해당 시간에 실행해야 할 스레드를 나타낸다. 또 다른 스레드는 잠자고 있다가 스레드가 추가되거나 삭제될 때 일어나 힙에 들어 있는 스레드를 실행할 것이다. 잠에서 깨어났을 때는 최소힙의 꼭대기에 있는 스레드를 확인한 뒤 실행 시간이 현재 시간과 같다면 최소힙에서 꺼내어 실행한다. 그 뒤에는 최소힙에서 그 다음에 실행해야 할 스레드의 실행 시간까지 잠이 든다(삭제를 한 뒤에는 스레드가 잠에서 깨어나 아무 것도 할 게 없다는 사실을 알게 될 것이다).
+
+두 번째 자료구조는 해시테이블이다. 이 해시테이블은 스레드의 ID를 키로 가지고 최소힙의 엔트리를 값으로 한다. 스레드를 취소해야 한다면 최소힙에서 이를 삭제해야 한다. 스레드가 추가될 때마다 해당 스레드를 최소힙에 추가한다. 삽입한 스레드가 최소힙의 꼭대기에 있다면 이들을 실행하는 스레드를 깨워 그 다음 일어나야 할 시간을 조정해야 한다.
+
+최소힙은 갱신하는 메서드와 힙 안에 들어 있는 스레드를 실행하는 스레드가 참조한다. 따라서 락이 필요하다. 가장 간단한 방법은 최소힙과 해시테이블을 읽거나 수정할 때마다 하나의 락으로 보호하는 것이다.
+
+## 문제 19.9 콜라츠의 추측 병렬로 확인하기
+
+문제 12.11에서 콜라츠의 추측과 휴리스틱 해결법에 대해 소개했다. 여기서는 콜라츠의 추측을 병렬로 확인하는 프로그램을 만들고자 한다. 다중코어 환경에서는 프로그램이 여러 코어에 콜라츠의 추측을 수행하는 스레드를 분배시킨다. U가 입력으로 주어졌을 때, [1, U] 사이의 모든 정수에 대해 콜라츠의 추측을 확인하는 프로그램을 작성하라.
+
+콜라츠의 추측을 확인하는 다중-스레드 프로그램을 설계하라. 주어진 코어를 전부 사용할 수 있다. 시스템에 과부하가 걸리는 것을 방지하기 위해 n개 이상의 스레드를 동시에 수행하면 안 된다.
+
+> 힌트: 성능 향상을 위해 다중스레드를 사용하지만 과부하는 최소화하라.
+
+각 정수값에 대해 경험으로 가지치기하는 방법은 문제 12.11의 해법에서 이야기했다. 이 문제의 목적은 다중스레드를 사용해서 이를 구현하는 것이다. 따라서 마스터 스레드를 사용해서 n개의 스레드를 만들어 낸다. 각 스레드는 하나의 정수값, 즉 1,2,...,x에 대해 차례대로 콜라츠의 추측을 확인한다. 마스터 스레드는 그 다음에 확인해야 할 숫자가 무엇인지 기록하고, 스레드가 작업이 끝났을 때 해당 스레드에 그 다음 숫자를 재할당한 뒤 콜라츠의 추측을 다시 수행한다.
+
+이 방법의 문제점은 개별 스레드가 콜라츠의 추측을 수행하는 데 필요한 시간보다 스레드 사이에 의사소통하는 비용이 더 크다는 데 있다. 자연스러운 해결책은 각 스레드가 [1, U]의 부분 범위를 처리하도록 하는 것이다. [1, U]를 n으로 나눈 뒤에 i번째 스레드가 i번째 부분 범위를 처리하도록 하면 된다.
+
+콜라츠의 추측을 확인하는 휴리스틱은 일부 정수에서 더 오래 걸린다. 이 방법을 사용하면 하나의 스레드가 다른 스레드보다 작업을 끝마치는 데 오래 걸리고 결국엔 코어가 몇 개만 빼고 전부 쉬는 상황에 빠질 수 있다.
+
+더 작은 구간으로 나누어 작업을 처리하면 개선할 수 있다. 물론 스레드 사이의 의사소통 비용이 존재하므로, 이를 상쇄할 만큼의 작업 크기는 필요하다. 작업 큐를 사용해서 아직 처리되지 않은 구간이 무엇인지 기록하고 작업을 마친 스레드에게 다음에 처리해야 할 구간을 재할당한다. Java의 Executor 프레임워크를 사용하면 이를 쉽게 구현할 수 있다. 다음은 이를 구현한 코드이다.
+
+```java
+// 기본적인 단일 작업을 수행한다. 예를 들면 각 구간에 대해 콜라츠의 추측을 확인한다.
+public static class MyRunnable implements Runnable {
+    public int lower;
+    public int upper;
+
+    MyRunnable(int lower, int upper) {
+        this.lower = lower;
+        this.upper = upper;
+    }
+
+    @Override
+    public void run() {
+        for (int i = lower; i <= upper; ++i) {
+            Collatz.CollatzCheck(i, new HashSet<BigInteger>());
+        }
+    }
+}
+
+// 개별 숫자를 확인한다.
+public static boolean CollatzCheck(BigInteger aNum, Set<BigInteger> visited) {
+    if (aNum.equals(BigInteger.ONE)) {
+        return true;
+    } else if (visited.contains(aNum)) {
+        return false;
+    }
+    visited.add(aNum);
+    if (aNum.getLowestSetBit() == 1) { // 홀수
+        return CollatzCheck(new BigInteger("3").multiply(aNum).add(BigInteger.ONE), visited);
+    } else { // 짝수
+        return CollatzCheck(aNum.shiftRight(1), visited); // 2로 나눈다.
+    }
+}
+
+public static boolean CollatzCheck(int aNum, Set<BigInteger> visited) {
+    BigInteger b = new BigInteger(new Integer(aNum).toString());
+    return CollatzCheck(b, visited);
+}
+
+public static ExecutorService execute() {
+    // Executor 프레임워크를 사용해서 작업 할당과 부하분산(load balancing)을 처리한다.
+    List<Thread> threads = new ArrayList<>();
+    ExecutorService executor = Executors.newFixedThreadPool(NTHREADS);
+    for (int i = 0; i < (N / RANGESIZE); i++) {
+        Runnable worker = new MyRunnable(i * RANGESIZE + 1, (i + 1) * RANGESIZE);
+        executor.execute(worker);
+    }
+    executor.shutdown();
+    return executor;
+}
+```
